--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>tolya2</artifactId>
+    <groupId>com.app.excel</groupId>
+    <artifactId>Excel-Parser</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -20,7 +20,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>com.example.App</mainClass>
+                    <stripDebug>true</stripDebug>
+                    <compress>2</compress>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <noManPages>true</noManPages>
+                    <launcher>Excel-Parser</launcher>
+                    <jlinkImageName>Excel-Parser</jlinkImageName>
+                    <jlinkZipName>Excel-Parser</jlinkZipName>
+                    <mainClass>com.app.excel.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
